--- a/20220303 main文件的测试.ipynb
+++ b/20220303 main文件的测试.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "410278b2",
    "metadata": {},
    "outputs": [
@@ -51,6 +51,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "2ba2e238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input': tensor([[ 0.0711,  0.0853,  0.0278,  ...,  0.0732,  0.0550,  0.0814],\n",
+       "         [ 0.1056,  0.0747,  0.0138,  ..., -0.0971,  0.0681, -0.0716],\n",
+       "         [ 0.1299,  0.1088,  0.0468,  ..., -0.0434,  0.0544, -0.0482],\n",
+       "         ...,\n",
+       "         [ 0.0441,  0.0868,  0.0572,  ...,  0.0904,  0.1955,  0.1138],\n",
+       "         [ 0.1195,  0.1047,  0.0892,  ..., -0.0731,  0.0705, -0.0692],\n",
+       "         [ 0.0777,  0.0731,  0.0430,  ...,  0.0785,  0.0667,  0.0866]]),\n",
+       " 'RUL': tensor([206, 172, 172,  ...,  79,  41,  96])}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "74afdc0d",
    "metadata": {},
@@ -69,6 +97,14 @@
    "source": [
     "train_dataset[0][\"input\"].device"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99131cb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
